syntax = "proto3";

option go_package = "./proto";

// Empty message from the Google Protobuf package
 import "google/protobuf/empty.proto";

service UserService {
    rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse);
}

message UpdateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string password = 4;
    string email = 5;
}

message User {
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string email = 4;
    int64 active = 5;
    int64 admin = 6;
}

message GetUsersResponse {
    repeated User users = 1;
}